updated orders/positions to just orders/position. fixed horizontal scroll on mobile of the trading page subnav

--- a/packages/augur-ui/src/modules/market/components/common/module-tabs/module-tabs.style.less
+++ b/packages/augur-ui/src/modules/market/components/common/module-tabs/module-tabs.style.less
@@ -2,6 +2,7 @@
 
 .Headers {
   display: flex;
+  overflow-x: auto;
 
   > ul {
     border-bottom: 1px solid @color-tertiary-one;
